ddetect (1.05) UNRELEASED; urgency=low

  * Joey Hess
    - Add usb nic modules to the manual module list. Closes: #262638, #267402
    - Hack to make this work for 2.4 which does not have a usb/nic subdir.

 -- Joey Hess <joeyh@debian.org>  Mon,  6 Sep 2004 17:15:48 -0400

ddetect (1.04) unstable; urgency=low

  * Joey Hess
    - Work around kernel bug #269823 by not loading the hpt366 module
      automatically.

 -- Joey Hess <joeyh@debian.org>  Fri,  3 Sep 2004 15:06:55 -0400

ddetect (1.03) unstable; urgency=low

  * Martin Michlmayr
    - Upstream changed how the SGI O2 (IP 32) is reported in /proc/cpuinfo.
      Deal with the old and the new value.
  * Joey Hess
    - Remove seen flag unsetting code, not necessary for a long time in the
      d-i environment.
  * Colin Watson
    - Make hw-detect Architecture: any so that we don't have to have
      discover-mac-io on non-powerpc architectures.
  * Updated translations:
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Welsh (cy.po) by Dafydd Harries
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Basque (eu.po) by Piarres Beobide Egaña
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Croatian (hr.po) by Krunoslav Gernhard
    - Latvian (lv.po) by Aigars Mahinovs
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Russian (ru.po) by Yuri Kozlov

 -- Colin Watson <cjwatson@debian.org>  Thu,  2 Sep 2004 14:40:18 +0100

ddetect (1.02) unstable; urgency=low

  * Colin Watson
    - Don't bother trying to load psmouse in d-i; just register it for use
      after the first reboot.
    - Move mac-io hardware detection out to a separate file, only installed
      on powerpc.
    - Detect dmasound_pmac/snd-powermac (depending on kernel version) on
      PowerMacs.
  * Joshua Kwan
    - Add USB stuff to devnames.txt.
    - Don't try to load sbp2 unless we also have scsi_mod lying around.